--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="\public\imgs\favicon-32x32.png"> <!-- Replace "favicon.png" with the path to your favicon image -->
+  <link rel="icon" type="image/ico" href="\imgs\favicon.ico"> <!-- Replace "favicon.png" with the path to your favicon image -->
   <style>
     * {
       padding: 0;
       margin: 0;
-      font-family: "Playfair Display", serif;
+      font-family: "roberto", serif;
     }
   </style>
   <title>SkillSwap</title>
